[package]
name = "roff"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
futures-util = "0.3.30"
log = "0.4.21"
pingora = { path = "../pingora", version = "0.2.0", features = [
    "proxy",
    "pingora-proxy",
    "pingora-load-balancing",
] }
rustls = { path = "../rustls/rustls", package = "rustls" }
serde = { version = "1.0.203", features = ["derive"] }
smallvec = "1.13.2"
smol_str = { version = "0.2.2", features = ["serde"] }
socket2 = { version = "0.5.7", features = ["all"] }
tokio = { version = "1.38.0", features = ["full"] }
